# TrioBinning

./: .gitmodules  CMakeLists.txt  README.md  TrioBinning.cpp
